# Chunking-Strategy-Evaluation

./: .env.example  .gitignore  README.md  delete_records.py  pyproject.toml
src/: chunking_strategies.py  config.py  document_loader.py  embeddings.py  evaluation.py  pipeline.py  vector_store.py
